ANSI großteils implementiert

--- a/qTame.ui
+++ b/qTame.ui
@@ -20,7 +20,11 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
-     <widget class="QTextConsole" name="txtConsole"/>
+     <widget class="QTextConsole" name="txtConsole">
+      <property name="cursorWidth">
+       <number>0</number>
+      </property>
+     </widget>
     </item>
     <item row="1" column="0">
      <widget class="QCmdWidget" name="cbCmd">
